--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 CoreCLM-CR/** filter=lfs diff=lfs merge=lfs -text
 CoreCLM-CR/language_model.bin filter=lfs diff=lfs merge=lfs -text
+CoreCLM-CR/language_model.bin filter=lfs diff=lfs merge=lfs -text
