--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 git+https://github.com/deepset-ai/haystack.git
 PyPDF2==2.4.2
 farm-haystack @ git+https://github.com/deepset-ai/haystack.git@a766b70a8fd19775c8ef0053242e7bbd721d07b4
+streamlit
